# DocRefinery

./: .gitignore  DOMAIN_NOTES.md  README.md  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl  facts.db
.refinery/ldus/: 20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF_52863c0022a45e05.json  Annual_Report_JUNE-2017_83af350d9b255c9d.json  Annual_Report_JUNE-2018_be91c585ac17932d.json  Annual_Report_JUNE-2019_eff14e2ce877fce1.json  Annual_Report_JUNE-2020_f08908a34df91d33.json  Annual_Report_JUNE-2021_60bb91f91e528bf4.json  Annual_Report_JUNE-2022_d051534327a0532c.json  Annual_Report_JUNE-2023_81da473e1919b6a8.json  Audit Report - 2023_9f7611d04410c6ac.json  CBE ANNUAL REPORT 2023-24_a1e5b6b1464a879c.json  CBE Annual Report 2006-7 _deeb578dc2d6cc10.json  CBE Annual Report 2012-13_85a1691a684245c3.json  CBE Annual Report 2016-17_0264842d1f0ce439.json  CBE Annual Report 2017-18_23f59ce8e65e4454.json  CBE Annual Report 2018-19_3cfd9fcbede85b47.json  Company_Profile_2024_25_f3995267ea91a6ac.json  Consumer Price Index August 2025_37fde8a1b1c7e97d.json  Consumer Price Index July 2025_3f4f25195c6ae48d.json  Consumer Price Index June 2025_ad314c1bedde43c8.json  (+10 more)
data/: README.md
docs/: FINAL_REPORT.md  INTERIM_REPORT.md
rubric/: extraction_rules.yaml
scripts/: generate_interim_artifacts.py  run_demo.py  structure_data_dir.py
src/: __init__.py  pipeline.py
src/agents/: __init__.py  chunker.py  (+6 more)
tests/: conftest.py  test_chunker.py  test_extraction_confidence.py  test_fact_table.py  test_indexer.py  test_query_agent.py  test_triage.py
(+132 files in other folders)
