[project]
name = "docrefinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.10",
    "pymupdf>=1.23",
    "pyyaml>=6.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
